# NWB_converter

./: .gitignore  NWB_conversion.py  NWB_conversion_GF.py  NWB_conversion_parallel.py  README.md  continuous_log_analysis.py  environment.yml  make_yaml_config.py  make_yaml_config_GF.py  metadata_to_yaml.py  petersenlab_to_nwb_env.txt  pyproject.toml  session_stitching.py
config_file_templates/: 2P_setup.yml  log_file_config_PB124_wd0.yml  session_data.yml  subject_data.yml  trial_type_mapping.yml
continuous_log_processing/: continuous_log_analysis.py
continuous_log_processing/misc_functions/: utils.py
converters/: DLC_to_nwb.py  behavior_to_nwb.py  ci_movie_to_nwb.py  ephys_to_nwb.py  facemap_to_nwb.py  images_to_nwb.py  nwb_saving.py  subject_to_nwb.py  suite2p_to_nwb.py  widefield_to_nwb.py
notebooks/: make_ref.py  nwb_widget.ipynb  waveform_check.ipynb  widefield_roi_management.py
utils/: behavior_converter_misc.py  ci_processing.py  continuous_processing.py  dlc_utils.py  ecephys_utils.py  ephys_converter_misc.py  ephys_utils.py  gf_utils.py  read_sglx.py  server_paths.py  sglx_meta_to_coords.py  tiff_loading.py  utils_gf.py  widefield_utils.py
