[project]
name = "nwb-converter"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pynwb (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "scanimage-tiff-reader (>=1.4.1.4,<2.0.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "imageio (>=2.37.0,<3.0.0)",
    "opencv-python (>=4.8,<4.12)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "read-roi (>=1.6.0,<2.0.0)",
    "dask (>=2025.7.0,<2026.0.0)",
    "dlc2kinematics (>=0.0.7,<0.0.8)",
    "scipy (>=1.10,<2.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
